# libPlugin

./: .gitignore  README.md  license.txt
cmake/: FindCoppeliaSim.cmake
simPlusPlus/: Handle.cpp  Handle.h  Handles.h  Lib.cpp  Lib.h  Plugin.cpp  Plugin.h  README.md  license.txt
simStubsGen/: README.md  generate.py  generate_api_index.py  generate_cmake_metadata.py  generate_deprecated_txt.py  generate_lua_calltips.py  generate_lua_typechecker.py  generate_lua_xml.py  lua_to_xml.py  parse.py
simStubsGen/cpp/: plugin.h  stubs.cpp  stubs.h  stubsPlusPlus.cpp
simStubsGen/model/: command.py  param.py  plugin.py
simStubsGen/tests/: CMakeLists.txt  callbacks.xml  simStubsGenTests.cpp  simStubsGenTests.lua  simStubsGenTestsRunner.lua
simStubsGen/xsd/: callbacks.xsd
simStubsGen/xsl/: reference.xsl
simTest/: simTest.lua  simTest.sh
